2005-02-05  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-04  Michael Koch  <konqueror@gmx.de>

        * javax/swing/SortingFocusTraversalPolicy.java
        (getSortedCycle): Fixed initialization of set.

2005-02-05  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-03  Robert Schuster  <thebohemian@gmx.net>

        * gnu/java/nio/charset/ISO_8859_1.java,
        gnu/java/nio/charset/US_ASCII.java,
        gnu/java/nio/charset/UTF_16.java,
        gnu/java/nio/charset/UTF_16_LE.java,
        gnu/java/nio/charset/UTF_16_BE.java,
        gnu/java/nio/charset/UTF_8.java: Fixed canonical names
         and aliases according to
         "http://www.iana.org/assignments/character-sets",
         "http://java.sun.com/j2se/1.5.0/docs/guide/intl/encoding.doc.html"
         and "http://oss.software.ibm.com/cgi-bin/icu/convexp?s=ALL".
        * gnu/java/nio/charset/Provider.java: Made charset lookup
         case-insensitive which fixes bug #11740.

2005-02-05  Sven de Marothy  <sven@physto.se>

	* java/text/SimpleDateFormat.java
	(parse): Tweak handling of 2-year dates
	* java/util/Calendar.java
	(clear): Clear fields to correct value.
	* java/util/GregorianCalendar.java
	(computeTime): Correct handling of time zones.
	Correct field minimum values.

2005-02-05  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Don't add PTHREAD_CFLAGS to CFLAGS.
	That fixes 'make CFLAGS="-Wall"' again.

	* kaffe/kaffevm/Makefile.am (SUBDIRS): Build threads
	before gc, because gc depends on them.

	* kaffe/kaffevm/kaffe-gc/Makefile.am 
	(libkaffegc_la_DEPENDENCIES): Added dependency on threads.

	* kaffe/kaffevm/systems/unix-pthreads/Makefile.am
	(libkthread_la_CFLAGS): Set to PTHREAD_CFLAGS.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_yield): Moved over here.

	* kaffe/kaffevm/systems/unix-pthreads/thread-internal.h
	(jthread_yield): Removed. Fixes numerous compiler warnings.
